--- a/portApp/templates/cadastrar.html
+++ b/portApp/templates/cadastrar.html
@@ -8,8 +8,8 @@
     {% bootstrap_css %}
     {% bootstrap_javascript %}
 </head>
-<body>
-    <form method="post">
+<body style="background-color: #bbbbbb;">
+    <form method="post" class="position-absolute top-50 start-50 translate-middle" style="background-color: #fff; border-radius: 10px; border: 10px solid #fff;">
         {% csrf_token %}
         <div class="form-group">
             <label>Nome do devedor</label>
@@ -18,12 +18,17 @@
           </div>
           <div class="form-group">
             <label>Valor da dívida</label>
-            <input type="number" class="form-control" placeholder="valor" name="valor">
+            <input type="number" class="form-control" placeholder="valor" name="valor" min="1">
           </div>
           <br>
           <div class="form-group">
             <label>Descrição da dívida</label>
-            <input type="text" class="form-control" placeholder="Descrição" name="descricao">
+            <select class="form-control" id="descricao_divida" name="divida">
+                <option value="Prestação de serviços">Prestação de serviços</option>
+                <option value="Empréstimo financeiro">Empréstimo financeiro</option>
+                <option value="Venda de insumos">Venda de insumos</option>
+            </select>
+            </div>
           </div>
           <br>
           <button type="submit" class="btn btn-primary">Cadastrar dívida</button>
